--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url('https://fonts.googleapis.com/css?family=Hi+Melody');
 @font-face{font-family:"Maplestory Light"; src:url("../fonts/Maplestory Light.ttf")}
 .content_row {display: none;}
 /* row_1 */
@@ -7,16 +9,18 @@
 /* row_2 */
 #row_2 {margin-top: 300px; text-align: center;}
 #row_2 img {width: 250px;}
-#row_2 span {font-size: 28px; font-family:"Maplestory Light"; line-height: 80px;vertical-align: bottom; color: #ab2bfa;}
+#row_2 span {font-size: 28px; font-family:"Maplestory Light", 'Hi Melody'; line-height: 80px;vertical-align: bottom; color: #ab2bfa;}
 /* row_3 */
 #row_3 {margin-top: 500px;}
 .block {margin-top: 50px; border-radius: 50px;}
-#block_2 {height: 200px; background-color: #9615e691;}
-#block_4 {height: 400px; background-color: #ab2bfa85;}
-#block_7 {height: 400px; background-color: #6e19a37e;}
-.project {display:none; margin-top: 50px; padding: 0; border: 2px solid rgb(0, 0, 0); transition: all 2s;}
-.project span {position: relative; display:none; width: 100%; height: 100%; font-size: 20px; font-weight: bold; text-align: center; transition: all 2s;}
-.project:hover span {display: block;background-color: rgba(0, 0, 0, 0.5);}
+#block_2 {height: 200px; background-color: #9615e6;}
+#block_4 {height: 400px; background-color: #ab2bfa;}
+#block_7 {height: 400px; background-color: #6e19a3;}
+.project {margin-top: 50px; padding: 0; border: 2px solid rgb(0, 0, 0); border-radius: 50px; transition: all 0.5s;}
+.project div {transition: all 0.5s;}
+.project span {position: relative; display:none; top:50%; transform: translateY(-50%); border-radius: 50px; font-size: 20px; font-weight: bold; font-family: 'Nanum Gothic', sans-serif; color:#fff; text-align: center; transition: all 0.5s;}
+.project:hover div{width: 100%; height: 100%; border-radius: 50px; background-color: rgba(0, 0, 0, 0.5);}
+.project:hover span {display: block;}
 #project_1 {height: 200px; background:url(../img/project_img_1.png) no-repeat 50%; background-size: cover;}
 #project_2 {height: 200px; background:url(../img/project_img_2.png) no-repeat 50%; background-size: cover;}
 #project_3 {height: 400px; background:url(../img/project_img_3.png) no-repeat 50%; background-size: cover;}
