--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,44 @@
 @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans');
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
-@import url('https://fonts.googleapis.com/css?family=Hi+Melody');
-@font-face{font-family:"Maplestory Light"; src:url("../fonts/Maplestory Light.ttf")}
+@font-face{font-family:"Maplestory Light"; src:url("../fonts/Maplestory-Light.woff")}
 .content_row {display: none;}
 /* row_1 */
 #row_1 {text-align: center;}
 #row_1 img {width: 90%;}
-#row_1 span {position: absolute; display:block; bottom:10%; left:50%; transform: translateX(-50%); font-size: 20px; font-family: 'Nanum Gothic', sans-serif; font-weight: bolder;}
+#row_1 span {position: absolute; display:block; bottom:10%; left:50%; transform: translateX(-50%); font-size: 20px; font-family: 'Nanum Gothic', sans-serif; font-weight: bolder; letter-spacing: 3px;}
 /* row_2 */
 #row_2 {margin-top: 300px; text-align: center;}
 #row_2 img {width: 250px;}
 #row_2 span {font-size: 28px; font-family:"Maplestory Light", 'Hi Melody'; line-height: 80px; vertical-align: bottom; color: #ab2bfa;}
 /* row_3 */
-#row_3 {margin-top: 500px;}
-.project {height: 170px; padding: 0; transition: all 0.5s;}
-.project > div {position:relative; width: 100%; height: 100%;}
-.project > div:hover {background: #f6f6f6;}
-.project div span {display: inline-block; margin-right:1px; padding: 0 7px; border-radius: 10px; font-family: 'Nanum Gothic', sans-serif; color:#fff; background: #ab2bfa; font-size: 12px;}
-.project div > span {display: block; padding-top: 30px; margin-left: 25%; font-weight: bolder; font-size: 40px; color:#000; background: none;}
-.project div p {margin-left: 25%; width: 800px;}
-.project div p span:nth-child(1) {display:block; margin-bottom: 10px; font-size:16px; letter-spacing: -1px; color:#888; background: none;}
+#row_3 {margin-top: 300px;}
+.project {position:relative; height: 170px; padding: 0; transition: all 0.5s;}
+.project:hover {background: #f6f6f6;}
+.project span {display: inline-block; margin-right:1px; padding: 0 7px; border-radius: 10px; font-family: 'Nanum Gothic', sans-serif; color:#fff; background: #ab2bfa; font-size: 12px;}
+.project > span {display: block; padding-top: 30px; margin-left: 25%; font-weight: bolder; font-size: 40px; color:#000; background: none;}
+.project > p {margin-left: 25%; width: 800px;}
+.project > p span:nth-child(1) {display:block; margin-bottom: 10px; font-size:16px; letter-spacing: -1px; color:#888; background: none;}
 .plus-to-minus {position: absolute; top: 50px; right: 25%; width: 60px; height: 60px; cursor: pointer; transition: -webkit-transform ease 400ms; transition: transform ease 400ms; transition: transform ease 400ms, -webkit-transform ease 400ms;}
 .plus-to-minus:before, .plus-to-minus:after { content: ""; position: absolute; background-color: #666; border-radius: 10px;}
-/*세로*/
+    /*세로*/
 .plus-to-minus:before { left: 50%; margin-left: -2px; width: 4px; height: 60px;}
-/*가로*/
+    /*가로*/
 .plus-to-minus:after { top: 50%; margin-top: -2px; height: 4px; width: 60px; transition: -webkit-transform ease 400ms; transition: transform ease 400ms; transition: transform ease 400ms, -webkit-transform ease 400ms;}
 .plus-to-minus.minus { -webkit-transform: rotate(-90deg); transform: rotate(-90deg);}
 .plus-to-minus.minus:after { -webkit-transform: rotate(-90deg); transform: rotate(-90deg);}
+    /* detail */
+.detail {display:none; text-align: center;}
+.detail .main_img {width: 70%; margin: 10px auto;}
+.detail button {width: 100%; height:50px; margin: 50px auto; border-radius: 10px; background-color: #ab2bfa; font-size: 20px; color: #fff;}
+.detail .period span {display: block; margin: 0; padding: 0; font-family:"Maplestory Light", 'Hi Melody'; color:#000; background: none; font-size: 26px;}
+.detail .period span:nth-child(2) {margin-bottom: 20px;}
+.detail .project_img {border: 2px solid #969696; padding: 2px;}
+.detail p {display:block; height: 300px; padding-top: 50px;}
+.detail span {display: block; margin: 0; padding: 0; font-family:"Maplestory Light", 'Hi Melody'; color:#000; background: none; font-size: 18px;text-align: left;}
 /* row_4 */
 #row_4 {margin-top: 50px; margin-bottom: 50px;}
 #row_4 img {width: 100px;}
 #row_4 span {display: block; font-size: 25px; font-family: 'Black Han Sans', sans-serif;}
 #row_4 span a{font-size: 20px;}
+
+
