--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@
 .content_row {display: none;}
 /* row_1 */
 #row_1 {text-align: center;}
-#row_1 img {width: 90%;}
-#row_1 span {position: absolute; display:block; bottom:10%; left:50%; transform: translateX(-50%); font-size: 20px; font-family: 'Nanum Gothic', sans-serif; font-weight: bolder; letter-spacing: 3px;}
+#row_1 img {width: 70%;}
+#row_1 span {position: absolute; display:block; bottom:0%; left:50%; transform: translateX(-50%); font-size: 20px; font-family: 'Nanum Gothic', sans-serif; font-weight: bolder; letter-spacing: 3px;}
 /* row_2 */
-#row_2 {margin-top: 300px; text-align: center;}
-#row_2 img {width: 250px;}
-#row_2 span {font-size: 28px; font-family:"Maplestory Light", 'Hi Melody'; line-height: 80px; vertical-align: bottom; color: #ab2bfa;}
+#row_2 {overflow: hidden;}
+/* #row_2 img {width: 250px;} */
+#row_2 .col-md-12 {padding: 0;}
+#row_2 img {position: relative; width: 100%;}
 /* row_3 */
-#row_3 {margin-top: 300px;}
+#row_3 {}
 .project {position:relative; height: 170px; padding: 0; transition: all 0.5s;}
 .project:hover {background: #f6f6f6;}
 .project span {display: inline-block; margin-right:1px; padding: 0 7px; border-radius: 10px; font-family: 'Nanum Gothic', sans-serif; color:#fff; background: #ab2bfa; font-size: 12px;}
@@ -50,6 +51,8 @@
 
 
 @media all and (max-width: 1020px) {
+    #row_1 img {width: 90%;}
+    #row_2 img {width: 200%; left: 65%; transform: translateX(-50%);}
     .project > p {width: 500px;}
     .plus-to-minus { right: 85%;}
 }
