--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
 #row_2 .col-md-12 {padding: 0;}
 #row_2 img {position: relative; width: 100%;}
 /* row_3 */
-#row_3 {}
 .project {position:relative; height: 170px; padding: 0; transition: all 0.5s;}
 .project:hover {background: #f6f6f6;}
 .project span {display: inline-block; margin-right:1px; padding: 0 7px; border-radius: 10px; font-family: 'Nanum Gothic', sans-serif; color:#fff; background: #ab2bfa; font-size: 12px;}
@@ -52,7 +51,19 @@
 
 @media all and (max-width: 1020px) {
     #row_1 img {width: 90%;}
+    #row_1 span {font-size: 16px;}
     #row_2 img {width: 200%; left: 65%; transform: translateX(-50%);}
-    .project > p {width: 500px;}
-    .plus-to-minus { right: 85%;}
+    .project > span {margin-left: 10%; font-size: 35px;}
+    .project > p {margin-left: 10%; width: 500px;}
+    .plus-to-minus {right: 10%;}
+}
+@media all and (max-width: 600px) {
+    #row_1 span {font-size: 12px;}
+    .project > span {margin-left: 0; font-size: 22px;}
+    .project > p {margin-left: 5px; width: 300px;}
+    .project > p span:nth-child(1) {font-size:12px;}
+    .project > p span:nth-child(2) {margin-left: 0;}
+    .plus-to-minus {right: 5px; width: 30px; height: 30px;}
+    .plus-to-minus:before {height: 30px;}
+    .plus-to-minus:after {width: 30px;}
 }
