--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,18 @@
 @font-face{font-family:"LemonMilk"; src:url("../fonts/LemonMilk.otf")}
 .content_row {display: none;}
 /* row_1 */
-#row_1 {text-align: center;}
+#row_1 {position: relative; top: 50px; text-align: center;}
 #row_1 img {width: 70%;}
 #row_1 span {position: absolute; display:block; bottom:0%; left:50%; transform: translateX(-50%); font-size: 20px; font-family: 'Nanum Gothic', sans-serif; font-weight: bolder; letter-spacing: 3px;}
 /* row_2 */
-#row_2 {overflow: hidden;}
+#row_2 {position: relative; overflow: hidden;}
 /* #row_2 img {width: 250px;} */
 #row_2 .col-md-12 {padding: 0;}
 #row_2 img {position: relative; width: 100%;}
 /* row_3 */
+#row_3 {position: relative; top: -150px;}
 .project {position:relative; height: 170px; padding: 0; transition: all 0.5s;}
-.project:hover {background: #f6f6f6;}
+.project:hover {background-color: rgba(230,230,230,0.5);}
 .project span {display: inline-block; margin-right:1px; padding: 0 7px; border-radius: 10px; font-family: 'Nanum Gothic', sans-serif; color:#fff; background: #ab2bfa; font-size: 12px;}
 .project > span {display: block; padding-top: 30px; margin-left: 20%; font-weight: bolder; font-size: 40px; color:#000; background: none;}
 .project > p {margin-left: 20%; width: 800px;}
@@ -37,7 +38,7 @@
 .detail span {display: inline-block; margin: 0; margin-bottom: 20px; padding: 0; font-family:"Maplestory Light", 'Hi Melody'; color:#444; background: none; font-size: 18px; text-align: left;}
 .detail span:nth-child(1) {font-size: 32px; color:#000;} 
 /* row_4 */
-#row_4 {margin-top: 50px; margin-bottom: 50px;}
+#row_4 {position: relative; top: -50px;}
 #row_4 img {width: 100px;}
 #row_4 span:nth-child(1) {display: block; font-size: 32px; color: #ab2bfa;}
 #row_4 span:nth-child(2) {display: block; font-size: 12px; color: #a6a6a6;}
